--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- Use relative paths for GitHub Pages when files live in the same directory -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -417,6 +418,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/main.js"></script>
+    <!-- Use relative paths for GitHub Pages when files live in the same directory -->
+    <script src="main.js"></script>
 </body>
 </html>
