rename: 'AI Strategy Audit' -> 'Revenue Automation Blueprint' across site (services, process, footer, chatbot, pricing)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </p>
             <div class="hero-cta-group">
                 <a href="#contact" class="btn btn-primary">
-                    <i class="fas fa-calendar-check"></i> Book Your AI Strategy Audit
+                    <i class="fas fa-calendar-check"></i> Start Your Revenue Automation Blueprint
                 </a>
                 <a href="#services" class="btn btn-secondary">
                     <i class="fas fa-arrow-down"></i> See How It Works
@@ -99,8 +99,8 @@
                 <div class="service-card">
                     <div class="service-number">01</div>
                     <div class="service-icon"><i class="fas fa-search-dollar"></i></div>
-                    <h3>AI Strategy Audit</h3>
-                    <p>A fixed-cost, deep-dive assessment of your operations. We map every workflow, identify where AI creates measurable return, and deliver a written roadmap you keep — regardless of next steps.</p>
+                    <h3>Revenue Automation Blueprint</h3>
+                    <p>Every engagement starts with a Revenue Automation Blueprint — a fixed-cost, deep-dive exploration of your operations. We map the activities generating your income and the activities consuming your payroll, then build a specific plan for automating both.</p>
                     <div class="service-detail">
                         <span class="detail-tag">Fixed Cost</span>
                         <span class="detail-tag">2–3 Week Delivery</span>
@@ -168,8 +168,8 @@
                         <div class="step-line"></div>
                     </div>
                     <div class="step-content">
-                        <h3>Strategy Audit</h3>
-                        <p>We map your workflows, identify high-ROI automation targets, and deliver a written AI roadmap with specific recommendations and projected returns.</p>
+                        <h3>Revenue Automation Blueprint</h3>
+                        <p>We map revenue-producing and payroll-consuming activities, then deliver a tangible plan with specific automation targets and projected returns.</p>
                     </div>
                 </div>
                 <div class="process-step">
@@ -332,7 +332,7 @@
                             <label for="interest">What are you most interested in?</label>
                             <select id="interest" name="interest" required>
                                 <option value="" disabled selected>Select one</option>
-                                <option value="audit">AI Strategy Audit</option>
+                                <option value="blueprint">Revenue Automation Blueprint</option>
                                 <option value="automation">Workflow Automation</option>
                                 <option value="full-build">Full AI Build + Retainer</option>
                                 <option value="on-prem">On-Premise / Private LLM</option>
@@ -366,7 +366,7 @@
                 </div>
                 <div class="footer-links">
                     <h4>Services</h4>
-                    <a href="#services">AI Strategy Audit</a>
+                    <a href="#services">Revenue Automation Blueprint</a>
                     <a href="#services">Workflow Automation</a>
                     <a href="#services">Full Build + Retainer</a>
                     <a href="#services">On-Premise LLM</a>
