assets(favicon): add site-colored Font Awesome fire favicon and wire up in head

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/favicon/fire.svg">
+
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
 </head>
