--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                     <div class="step-content">
                         <h3>Scale & Optimize</h3>
-                        <p>Full build-out across your operations. Ongoing retainer for monitoring, optimization, and quarterly strategic reviews. Your AI systems evolve with your business.</p>
+                        <p>Full build-out across your operations. Ongoing support for monitoring, optimization, and quarterly strategic reviews. Your AI systems evolve with your business.</p>
                     </div>
                 </div>
             </div>
@@ -204,7 +204,7 @@
             <div class="section-header">
                 <span class="section-tag">Who We Serve</span>
                 <h2 class="section-title">Built for DFW Businesses <span class="text-accent">Ready to Scale</span></h2>
-                <p class="section-subtitle">We work with companies between 20–500 employees who have real operational complexity and real revenue to protect.</p>
+                <p class="section-subtitle">We work with companies that have real operational complexity and real revenue to scale and protect.</p>
             </div>
             <div class="industries-grid">
                 <div class="industry-card">
@@ -249,8 +249,8 @@
                     <span class="section-tag">About CTX Foundry</span>
                     <h2 class="section-title">Forged in Texas.<br><span class="text-accent">Built for Results.</span></h2>
                     <p>A foundry is where raw material gets refined under heat and pressure into something precise, durable, and purpose-built. That's exactly what we do with your business operations.</p>
-                    <p>We're not a dev shop. We're not a staffing agency. We're an AI consulting firm that leads with ROI — every engagement is measured against the revenue it generates or the cost it eliminates.</p>
-                    <p>Based in the Dallas–Fort Worth metroplex, we work exclusively with SMBs and mid-market companies who have real operational complexity and need AI systems that actually move the needle.</p>
+                    <p>We're not a dev shop. We're not a staffing agency. We're AI systems builders whose work starts and leads with ROI — every engagement is measured against the revenue it generates or the cost it eliminates.</p>
+                    <p>Based in the Dallas–Fort Worth metroplex, we work exclusively with SMBs and mid-market companies who have real operational complexity and require AI systems that actually move the needle. For those exploring what AI can do for their business — we will not only help you understand what is possible but show you how to get there, and then build it with you.</p>
                     <div class="about-values">
                         <div class="value">
                             <i class="fas fa-bullseye"></i>
@@ -344,7 +344,7 @@
                         </div>
                         <div class="form-group">
                             <label for="message">Tell us about your biggest operational challenge</label>
-                            <textarea id="message" name="message" rows="3" placeholder="What's costing you the most time or money right now?"></textarea>
+                            <textarea id="message" name="message" rows="3" placeholder="What's costing you the most time? What's drawing out your revenue producing activities?"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-full">
                             <i class="fas fa-calendar-check"></i> Book Discovery Call
