--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                         </div>
                         <div class="form-group">
                             <label for="message">Tell us about your biggest operational challenge</label>
-                            <textarea id="message" name="message" rows="3" placeholder="What's costing you the most time? What's drawing out your revenue producing activities?"></textarea>
+                            <textarea id="message" name="message" rows="3" placeholder="What's costing you the most time? What slows revenue-producing work?"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-full">
                             <i class="fas fa-calendar-check"></i> Book Discovery Call
