--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
                 </div>
                 <div class="contact-form-wrapper">
                     <form class="contact-form" id="contactForm" action="https://formspree.io/f/mykdlnaj" method="POST">
+                        <!-- Fallback redirect to keep users on-site if JS fails -->
+                        <input type="hidden" name="_redirect" value="https://ctxfoundry.com/#contact">
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" id="name" name="name" required placeholder="John Smith">
@@ -420,6 +422,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/main.js"></script>
+    <!-- Cache-bust to ensure updated JS loads in production -->
+    <script src="js/main.js?v=1"></script>
 </body>
 </html>
