--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                 <div class="service-card">
                     <div class="service-number">03</div>
                     <div class="service-icon"><i class="fas fa-layer-group"></i></div>
-                    <h3>Full Build + Retainer</h3>
+                    <h3>Full Build + Support</h3>
                     <p>Your complete AI operations ecosystem — built out, monitored, and continuously optimized. Quarterly roadmap reviews ensure your systems evolve as your business grows.</p>
                     <div class="service-detail">
-                        <span class="detail-tag">Monthly Retainer</span>
+                        <span class="detail-tag">Monthly Support</span>
                         <span class="detail-tag">Ongoing Optimization</span>
                     </div>
                 </div>
@@ -339,7 +339,7 @@
                                 <option value="" disabled selected>Select one</option>
                                 <option value="blueprint">Revenue Automation Blueprint</option>
                                 <option value="automation">Workflow Automation</option>
-                                <option value="full-build">Full AI Build + Retainer</option>
+                                <option value="full-build">Full AI Build + Support</option>
                                 <option value="on-prem">On-Premise / Private LLM</option>
                                 <option value="not-sure">Not sure yet — let's talk</option>
                             </select>
@@ -373,7 +373,7 @@
                     <h4>Services</h4>
                     <a href="#services">Revenue Automation Blueprint</a>
                     <a href="#services">Workflow Automation</a>
-                    <a href="#services">Full Build + Retainer</a>
+                    <a href="#services">Full Build + Support</a>
                     <a href="#services">On-Premise LLM</a>
                 </div>
                 <div class="footer-links">
@@ -395,7 +395,7 @@
         </div>
     </footer>
 
-    <!-- ===== CHATBOT WIDGET (Gated — Zero API Cost) ===== -->
+    <!-- ===== CHATBOT WIDGET ===== -->
     <div class="chatbot-widget" id="chatbotWidget">
         <button class="chatbot-toggle" id="chatbotToggle" aria-label="Open chat">
             <i class="fas fa-comment-dots"></i>
