--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <section class="services" id="services">
         <div class="container">
             <div class="section-header">
-                <span class="section-tag">What We Build</span>
-                <h2 class="section-title">Four Pillars. One Outcome: <span class="text-accent">ROI.</span></h2>
-                <p class="section-subtitle">Every engagement follows a phased model — from strategy through full deployment. You see results before you scale commitment.</p>
+                <span class="section-tag">The Foundry Process</span>
+                <h2 class="section-title">Four Phases. One Outcome: <span class="text-accent">ROI.</span></h2>
+                <p class="section-subtitle">A clear, repeatable plan that proves value before you scale.</p>
             </div>
             <div class="services-grid">
                 <!-- Pillar 1 -->
@@ -113,7 +113,7 @@
                 <div class="service-card">
                     <div class="service-number">02</div>
                     <div class="service-icon"><i class="fas fa-cogs"></i></div>
-                    <h3>Single Workflow Build + Pilot</h3>
+                    <h3>Single Workflow Pilot</h3>
                     <p>We build one high-impact AI workflow end-to-end and run a 30–60 day pilot with defined success metrics. You see the ROI before committing to a full build.</p>
                     <div class="service-detail">
                         <span class="detail-tag">Scoped Project</span>
@@ -124,7 +124,7 @@
                 <div class="service-card">
                     <div class="service-number">03</div>
                     <div class="service-icon"><i class="fas fa-layer-group"></i></div>
-                    <h3>Full Build + Support</h3>
+                    <h3>Full Build + Retainer</h3>
                     <p>Your complete AI operations ecosystem — built out, monitored, and continuously optimized. Quarterly roadmap reviews ensure your systems evolve as your business grows.</p>
                     <div class="service-detail">
                         <span class="detail-tag">Monthly Support</span>
@@ -135,8 +135,8 @@
                 <div class="service-card featured">
                     <div class="service-number">04</div>
                     <div class="service-icon"><i class="fas fa-server"></i></div>
-                    <h3>On-Premise AI / Private LLM</h3>
-                    <p>Your own private AI brain. We deploy fine-tuned language models on your infrastructure — your data never leaves your network. Built for legal, healthcare, finance, and firms with proprietary IP.</p>
+                    <h3>On‑Prem AI</h3>
+                    <p>Your own AI stack on your infrastructure. Full data sovereignty for regulated teams; fine‑tuned to your domain with observability and cost controls.</p>
                     <div class="service-detail">
                         <span class="detail-tag">Premium Engagement</span>
                         <span class="detail-tag">Full Data Sovereignty</span>
@@ -147,6 +147,68 @@
     </section>
 
     <!-- ===== PROCESS ===== -->
+    <!-- ===== CAPABILITIES (PREVIEW) ===== -->
+    <section class="capabilities" id="capabilities">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Capabilities</span>
+                <h2 class="section-title">Practical AI You Can <span class="text-accent">Use Now</span></h2>
+                <p class="section-subtitle">Pick targeted, secure deployments — or pair them with your Blueprint for compounding results.</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-shield-alt"></i></div>
+                    <h3>Secure Copilot Deployment</h3>
+                    <p>Deploy copilots safely across your org. We handle SSO, RBAC, and Microsoft 365 security (SharePoint site/library permissions, Teams scopes, sensitivity labels, DLP).</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">SSO + RBAC</span>
+                        <span class="detail-tag">SharePoint Permissions</span>
+                        <span class="detail-tag">Sensitivity Labels</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-book"></i></div>
+                    <h3>Ask Your Documentation</h3>
+                    <p>Turn handbooks, SOPs, and playbooks into a private knowledge assistant. Source‑cited answers; access follows your SharePoint/Google Drive permissions.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">Cited Answers</span>
+                        <span class="detail-tag">Access Controls</span>
+                        <span class="detail-tag">Continuous Sync</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-bolt"></i></div>
+                    <h3>Targeted Workflow Automations</h3>
+                    <p>Ship one high‑ROI automation fast — lead follow‑up, report generation, customer comms, or back‑office ops. Pilot in 30–60 days with clear KPIs.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">KPI‑Driven</span>
+                        <span class="detail-tag">30–60 Day Pilot</span>
+                        <span class="detail-tag">Maintained</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-server"></i></div>
+                    <h3>On‑Prem AI</h3>
+                    <p>Your own AI stack on your infrastructure. Full data sovereignty for regulated teams; fine‑tuned to your domain with observability and cost controls.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">On‑Prem</span>
+                        <span class="detail-tag">Fine‑Tuned</span>
+                        <span class="detail-tag">Observability</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-star"></i></div>
+                    <h3>Reviews & Reputation Automation</h3>
+                    <p>Automate review requests and follow‑ups after service completion. Generate compliant responses, escalate issues, and surface insights to improve NPS.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">Multi‑Channel</span>
+                        <span class="detail-tag">Smart Responses</span>
+                        <span class="detail-tag">Escalations</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="process" id="process">
         <div class="container">
             <div class="section-header">
