nav: add Capabilities anchor; capabilities: add AI Readiness & Safety Training as sixth card

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#services" class="nav-link">Services</a></li>
+                <li><a href="#capabilities" class="nav-link">Capabilities</a></li>
                 <li><a href="#process" class="nav-link">Process</a></li>
                 <li><a href="#industries" class="nav-link">Industries</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -204,6 +205,16 @@
                         <span class="detail-tag">Multi‑Channel</span>
                         <span class="detail-tag">Smart Responses</span>
                         <span class="detail-tag">Escalations</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+                    <h3>AI Readiness & Safety Training</h3>
+                    <p>Equip your teams to use AI responsibly. Clear do’s and don’ts by role and vertical, privacy and data‑handling basics, and practical examples tailored to your workflows.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">Policy‑Aligned</span>
+                        <span class="detail-tag">Role‑Based</span>
+                        <span class="detail-tag">Hands‑On</span>
                     </div>
                 </div>
             </div>
