pages: add Capabilities + About pages; update nav; add providers strip and logo assets; slim providers row on Home

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#services" class="nav-link">Services</a></li>
-                <li><a href="#capabilities" class="nav-link">Capabilities</a></li>
+                <li><a href="/capabilities.html" class="nav-link">Capabilities</a></li>
                 <li><a href="#process" class="nav-link">Process</a></li>
                 <li><a href="#industries" class="nav-link">Industries</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="/about.html" class="nav-link">About</a></li>
                 <li><a href="#contact" class="nav-link nav-cta">Book a Strategy Session</a></li>
             </ul>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -148,78 +148,7 @@
     </section>
 
     <!-- ===== PROCESS ===== -->
-    <!-- ===== CAPABILITIES (PREVIEW) ===== -->
-    <section class="capabilities" id="capabilities">
-        <div class="container">
-            <div class="section-header">
-                <span class="section-tag">Capabilities</span>
-                <h2 class="section-title">Practical AI You Can <span class="text-accent">Use Now</span></h2>
-                <p class="section-subtitle">Pick targeted, secure deployments — or pair them with your Blueprint for compounding results.</p>
-            </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-shield-alt"></i></div>
-                    <h3>Secure Copilot Deployment</h3>
-                    <p>Deploy copilots safely across your org. We handle SSO, RBAC, and Microsoft 365 security (SharePoint site/library permissions, Teams scopes, sensitivity labels, DLP).</p>
-                    <div class="service-detail">
-                        <span class="detail-tag">SSO + RBAC</span>
-                        <span class="detail-tag">SharePoint Permissions</span>
-                        <span class="detail-tag">Sensitivity Labels</span>
-                    </div>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-book"></i></div>
-                    <h3>Ask Your Documentation</h3>
-                    <p>Turn handbooks, SOPs, and playbooks into a private knowledge assistant. Source‑cited answers; access follows your SharePoint/Google Drive permissions.</p>
-                    <div class="service-detail">
-                        <span class="detail-tag">Cited Answers</span>
-                        <span class="detail-tag">Access Controls</span>
-                        <span class="detail-tag">Continuous Sync</span>
-                    </div>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-bolt"></i></div>
-                    <h3>Targeted Workflow Automations</h3>
-                    <p>Ship one high‑ROI automation fast — lead follow‑up, report generation, customer comms, or back‑office ops. Pilot in 30–60 days with clear KPIs.</p>
-                    <div class="service-detail">
-                        <span class="detail-tag">KPI‑Driven</span>
-                        <span class="detail-tag">30–60 Day Pilot</span>
-                        <span class="detail-tag">Maintained</span>
-                    </div>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-server"></i></div>
-                    <h3>On‑Prem AI</h3>
-                    <p>Your own AI stack on your infrastructure. Full data sovereignty for regulated teams; fine‑tuned to your domain with observability and cost controls.</p>
-                    <div class="service-detail">
-                        <span class="detail-tag">On‑Prem</span>
-                        <span class="detail-tag">Fine‑Tuned</span>
-                        <span class="detail-tag">Observability</span>
-                    </div>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-star"></i></div>
-                    <h3>Reviews & Reputation Automation</h3>
-                    <p>Automate review requests and follow‑ups after service completion. Generate compliant responses, escalate issues, and surface insights to improve NPS.</p>
-                    <div class="service-detail">
-                        <span class="detail-tag">Multi‑Channel</span>
-                        <span class="detail-tag">Smart Responses</span>
-                        <span class="detail-tag">Escalations</span>
-                    </div>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"><i class="fas fa-chalkboard-teacher"></i></div>
-                    <h3>AI Readiness & Safety Training</h3>
-                    <p>Equip your teams to use AI responsibly. Clear do’s and don’ts by role and vertical, privacy and data‑handling basics, and practical examples tailored to your workflows.</p>
-                    <div class="service-detail">
-                        <span class="detail-tag">Policy‑Aligned</span>
-                        <span class="detail-tag">Role‑Based</span>
-                        <span class="detail-tag">Hands‑On</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- Capabilities preview removed to keep lander tight -->
     <section class="process" id="process">
         <div class="container">
             <div class="section-header">
@@ -434,6 +363,14 @@
     <!-- ===== FOOTER ===== -->
     <footer class="footer">
         <div class="container">
+            <!-- Slim providers row above footer for light validation -->
+            <div class="providers-row" style="display:flex; gap:28px; align-items:center; flex-wrap:wrap; justify-content:center; padding: 16px 0; opacity:0.8; border-top:1px solid var(--border); border-bottom:1px solid var(--border); margin-bottom:24px;">
+                <span class="section-tag" style="margin-right:8px;">Models We Work With</span>
+                <img src="images/providers/openai.svg" alt="OpenAI" style="height:22px;" />
+                <img src="images/providers/anthropic.svg" alt="Anthropic" style="height:18px;" />
+                <img src="images/providers/gemini.svg" alt="Google Gemini" style="height:20px;" />
+                <span style="color:var(--text-secondary); font-weight:600;">+ more</span>
+            </div>
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="#hero" class="nav-logo">
