wording: replace 'Retainer' with 'Support' across site (cards, footers, chatbot pricing text)

--- a/capabilities.html
+++ b/capabilities.html
@@ -150,7 +150,7 @@
           <h4>Services</h4>
           <a href="/#services">Revenue Automation Blueprint</a>
           <a href="/#services">Single Workflow Pilot</a>
-          <a href="/#services">Full Build + Retainer</a>
+          <a href="/#services">Full Build + Support</a>
           <a href="/#services">On‑Prem AI</a>
         </div>
         <div class="footer-links">
