--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="service-card">
                     <div class="service-number">03</div>
                     <div class="service-icon"><i class="fas fa-layer-group"></i></div>
-                    <h3>Full Build + Retainer</h3>
+                    <h3>Full Build + Support</h3>
                     <p>Your complete AI operations ecosystem — built out, monitored, and continuously optimized. Quarterly roadmap reviews ensure your systems evolve as your business grows.</p>
                     <div class="service-detail">
                         <span class="detail-tag">Monthly Support</span>
