--- a/index.html
+++ b/index.html
@@ -90,6 +90,45 @@
         </div>
     </section>
 
+    <!-- ===== SAFE FRONT DOOR ===== -->
+    <section class="services" id="start-safe" style="padding-top: 24px;">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Start Here</span>
+                <h2 class="section-title">Get Your Business into the <span class="text-accent">AI Era</span></h2>
+                <p class="section-subtitle">Immediate, practical ways to put AI to work — no hype, no tool sprawl.</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-shield-alt"></i></div>
+                    <h3>Safe AI Workspace Starter</h3>
+                    <p>A company‑approved AI workspace with role‑based assistants and clear guardrails. Practical value this week — without the guesswork.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">SSO + RBAC</span>
+                        <span class="detail-tag">Business‑Safe Defaults</span>
+                        <span class="detail-tag">Logged</span>
+                        <span class="detail-tag">Guardrails</span>
+                    </div>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-user-astronaut"></i></div>
+                    <h3>Secure Copilot Deployment</h3>
+                    <p>Roll out copilots that respect SharePoint and Teams permissions. Day‑one productivity with built‑in data boundaries.</p>
+                    <div class="service-detail">
+                        <span class="detail-tag">SSO + RBAC</span>
+                        <span class="detail-tag">SharePoint Permissions</span>
+                        <span class="detail-tag">Sensitivity Labels</span>
+                        <span class="detail-tag">DLP</span>
+                    </div>
+                    <div class="hero-cta-group" style="margin-top:12px;">
+                        <a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Get Started</a>
+                    </div>
+                </div>
+            </div>
+            <p class="section-subtitle" style="margin-top:16px;">Ready to scale? The Foundry Process turns early wins into repeatable ROI.</p>
+        </div>
+    </section>
+
     <!-- ===== SERVICES ===== -->
     <section class="services" id="services">
         <div class="container">
@@ -125,23 +164,33 @@
                 <div class="service-card">
                     <div class="service-number">03</div>
                     <div class="service-icon"><i class="fas fa-layer-group"></i></div>
-                    <h3>Full Build + Support</h3>
-                    <p>Your complete AI operations ecosystem — built out, monitored, and continuously optimized. Quarterly roadmap reviews ensure your systems evolve as your business grows.</p>
+                    <h3>Full Build</h3>
+                    <p>Your complete AI operations ecosystem — architected and delivered for measurable outcomes across teams and workflows.</p>
                     <div class="service-detail">
-                        <span class="detail-tag">Monthly Support</span>
-                        <span class="detail-tag">Ongoing Optimization</span>
+                        <span class="detail-tag">Scoped Delivery</span>
+                        <span class="detail-tag">Measured Outcomes</span>
                     </div>
                 </div>
                 <!-- Pillar 4 -->
-                <div class="service-card featured">
+                <div class="service-card">
                     <div class="service-number">04</div>
-                    <div class="service-icon"><i class="fas fa-server"></i></div>
-                    <h3>On‑Prem AI</h3>
-                    <p>Your own AI stack on your infrastructure. Full data sovereignty for regulated teams; fine‑tuned to your domain with observability and cost controls.</p>
+                    <div class="service-icon"><i class="fas fa-life-ring"></i></div>
+                    <h3>Ongoing Support</h3>
+                    <p>Continuous monitoring and optimization with a standing roadmap. Your systems evolve as your business grows.</p>
                     <div class="service-detail">
-                        <span class="detail-tag">Premium Engagement</span>
-                        <span class="detail-tag">Full Data Sovereignty</span>
+                        <span class="detail-tag">Monthly Support</span>
+                        <span class="detail-tag">Quarterly Reviews</span>
                     </div>
+                </div>
+            </div>
+            <div class="service-card featured" style="margin-top:24px;">
+                <div class="service-icon"><i class="fas fa-server"></i></div>
+                <h3>Premium: On‑Prem AI</h3>
+                <p>Your own AI stack on your infrastructure. Full data sovereignty for regulated teams; fine‑tuned to your domain with observability and cost controls.</p>
+                <div class="service-detail">
+                    <span class="detail-tag">On‑Prem</span>
+                    <span class="detail-tag">Fine‑Tuned</span>
+                    <span class="detail-tag">Observability</span>
                 </div>
             </div>
         </div>
