--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                         <span class="detail-tag">Logged</span>
                         <span class="detail-tag">Guardrails</span>
                     </div>
+                    <div class="hero-cta-group" style="margin-top:12px;">
+                        <a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Get Started</a>
+                    </div>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-user-astronaut"></i></div>
