front-door: make cards clickable to #contact; remove per-card buttons; add subtle hover affordance

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p class="section-subtitle">Immediate, practical ways to put AI to work — no hype, no tool sprawl.</p>
             </div>
             <div class="services-grid">
-                <div class="service-card">
+                <a class="service-card" href="#contact" style="text-decoration:none; color:inherit; display:block;">
                     <div class="service-icon"><i class="fas fa-shield-alt"></i></div>
                     <h3>Safe AI Workspace Starter</h3>
                     <p>A company‑approved AI workspace with role‑based assistants and clear guardrails. Practical value this week — without the guesswork.</p>
@@ -109,11 +109,8 @@
                         <span class="detail-tag">Logged</span>
                         <span class="detail-tag">Guardrails</span>
                     </div>
-                    <div class="hero-cta-group" style="margin-top:12px;">
-                        <a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Get Started</a>
-                    </div>
-                </div>
-                <div class="service-card">
+                </a>
+                <a class="service-card" href="#contact" style="text-decoration:none; color:inherit; display:block;">
                     <div class="service-icon"><i class="fas fa-user-astronaut"></i></div>
                     <h3>Secure Copilot Deployment</h3>
                     <p>Roll out copilots that respect SharePoint and Teams permissions. Day‑one productivity with built‑in data boundaries.</p>
@@ -123,10 +120,7 @@
                         <span class="detail-tag">Sensitivity Labels</span>
                         <span class="detail-tag">DLP</span>
                     </div>
-                    <div class="hero-cta-group" style="margin-top:12px;">
-                        <a href="#contact" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Get Started</a>
-                    </div>
-                </div>
+                </a>
             </div>
             <p class="section-subtitle" style="margin-top:16px;">Ready to scale? The Foundry Process turns early wins into repeatable ROI.</p>
         </div>
