front-door: point hero 'See How It Works' CTA to #start-safe section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a href="#contact" class="btn btn-primary">
                     <i class="fas fa-calendar-check"></i> Start Your Revenue Automation Blueprint
                 </a>
-                <a href="#services" class="btn btn-secondary">
+                <a href="#start-safe" class="btn btn-secondary">
                     <i class="fas fa-arrow-down"></i> See How It Works
                 </a>
             </div>
