copy: hero subhead — 'on‑premise LLM' -> 'on‑premise AI' for consistency

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="hero-accent">That Pay for Themselves</span>
             </h1>
             <p class="hero-subtitle">
-                Fixed-cost AI strategy, workflow automation, and on-premise LLM deployment
+                Fixed-cost AI strategy, workflow automation, and on-premise AI deployment
                 for SMBs and mid-market companies. ROI measured in weeks, not years.
             </p>
             <div class="hero-cta-group">
