--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CTX Foundry — We build AI systems that pay for themselves. AI consulting, workflow automation, and on-premise LLM deployment for DFW businesses.">
-    <meta name="keywords" content="AI consulting Dallas, AI automation DFW, workflow automation Fort Worth, AI systems Texas, LLM deployment Dallas">
+    <meta name="description" content="CTX Foundry — We build AI systems that pay for themselves. AI consulting, workflow automation, and on-premise AI deployment for DFW businesses.">
+    <meta name="keywords" content="AI consulting Dallas, AI automation DFW, workflow automation Fort Worth, AI systems Texas, LLM deployment Dallas, AI deployment">
     <meta property="og:title" content="CTX Foundry — Precision AI for Growing Businesses">
     <meta property="og:description" content="We build AI systems that pay for themselves. Serving DFW SMBs and mid-market companies.">
     <meta property="og:type" content="website">
@@ -397,7 +397,7 @@
                                 <option value="blueprint">Revenue Automation Blueprint</option>
                                 <option value="automation">Workflow Automation</option>
                                 <option value="full-build">Full AI Build + Support</option>
-                                <option value="on-prem">On-Premise / Private LLM</option>
+                                <option value="on-prem">On-Premise / Private AI</option>
                                 <option value="not-sure">Not sure yet — let's talk</option>
                             </select>
                         </div>
@@ -439,7 +439,7 @@
                     <a href="#services">Revenue Automation Blueprint</a>
                     <a href="#services">Workflow Automation</a>
                     <a href="#services">Full Build + Support</a>
-                    <a href="#services">On-Premise LLM</a>
+                    <a href="#services">On-Premise AI</a>
                 </div>
                 <div class="footer-links">
                     <h4>Company</h4>
