Replace site flame branding with new CTX Foundry assets

--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="icon" type="image/svg+xml" href="images/favicon/fire.svg">
+  <link rel="icon" type="image/svg+xml" href="images/flame_logo-CTXfoundry.svg">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <nav class="navbar" id="navbar">
     <div class="nav-container">
       <a href="/" class="nav-logo">
-        <span class="logo-icon"><i class="fas fa-fire"></i></span>
+        <span class="logo-icon"><img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo"></span>
         <span class="logo-text">CTX<span class="logo-accent">Foundry</span></span>
       </a>
       <ul class="nav-menu" id="navMenu">
@@ -76,7 +76,7 @@
         <div class="about-visual">
           <div class="visual-card">
             <div class="visual-stat">
-              <i class="fas fa-fire"></i>
+              <img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo">
               <span class="visual-tagline">"We don't sell AI. We build systems that earn."</span>
             </div>
           </div>
@@ -90,7 +90,7 @@
       <div class="footer-grid">
         <div class="footer-brand">
           <a href="/" class="nav-logo">
-            <span class="logo-icon"><i class="fas fa-fire"></i></span>
+            <span class="logo-icon"><img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo"></span>
             <span class="logo-text">CTX<span class="logo-accent">Foundry</span></span>
           </a>
           <p>Precision AI for growing businesses.<br>Forged in Texas. Built for results.</p>
