--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="images/favicon/fire.svg">
+    <link rel="icon" type="image/svg+xml" href="images/flame_logo-CTXfoundry.svg">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
@@ -40,7 +40,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="#hero" class="nav-logo">
-                <span class="logo-icon"><i class="fas fa-fire"></i></span>
+                <span class="logo-icon"><img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo"></span>
                 <span class="logo-text">CTX<span class="logo-accent">Foundry</span></span>
             </a>
             <ul class="nav-menu" id="navMenu">
@@ -335,7 +335,7 @@
                 <div class="about-visual">
                     <div class="visual-card">
                         <div class="visual-stat">
-                            <i class="fas fa-fire"></i>
+                            <img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo">
                             <span class="visual-tagline">"We don't sell AI.<br>We build systems that earn."</span>
                         </div>
                     </div>
@@ -429,7 +429,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="#hero" class="nav-logo">
-                        <span class="logo-icon"><i class="fas fa-fire"></i></span>
+                        <span class="logo-icon"><img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo"></span>
                         <span class="logo-text">CTX<span class="logo-accent">Foundry</span></span>
                     </a>
                     <p>Precision AI for growing businesses.<br>Forged in Texas. Built for results.</p>
@@ -468,7 +468,7 @@
         <div class="chatbot-window" id="chatbotWindow">
             <div class="chatbot-header">
                 <div class="chatbot-header-info">
-                    <span class="chatbot-avatar"><i class="fas fa-fire"></i></span>
+                    <span class="chatbot-avatar"><img src="images/flame_logo-CTXfoundry.svg" alt="CTX Foundry flame logo"></span>
                     <div>
                         <strong>CTX Foundry</strong>
                         <span class="chatbot-status">Online</span>
